2012-01-04  Andras Becsi  <andras.becsi@nokia.com>

        REGRESSION(r104028): Broke editing tests and event coordinates in desktop behaviour
        https://bugs.webkit.org/show_bug.cgi?id=75542


        [Qt][WK2] Pinch zoom should affect the page size
        https://bugs.webkit.org/show_bug.cgi?id=74601

        Unreviewed roll-out.

        * Shared/NativeWebMouseEvent.h:
        * Shared/NativeWebTouchEvent.h:
        * Shared/NativeWebWheelEvent.h:
        * Shared/qt/NativeWebMouseEventQt.cpp:
        (WebKit::NativeWebMouseEvent::NativeWebMouseEvent):
        * Shared/qt/NativeWebTouchEventQt.cpp:
        (WebKit::NativeWebTouchEvent::NativeWebTouchEvent):
        * Shared/qt/NativeWebWheelEventQt.cpp:
        (WebKit::NativeWebWheelEvent::NativeWebWheelEvent):
        * Shared/qt/WebEventFactoryQt.cpp:
        (WebKit::WebEventFactory::createWebMouseEvent):
        (WebKit::WebEventFactory::createWebWheelEvent):
        (WebKit::WebEventFactory::createWebTouchEvent):
        * Shared/qt/WebEventFactoryQt.h:
        * UIProcess/API/qt/qquickwebpage.cpp:
        (QQuickWebPage::keyPressEvent):
        (QQuickWebPage::keyReleaseEvent):
        (QQuickWebPage::inputMethodEvent):
        (QQuickWebPage::focusInEvent):
        (QQuickWebPage::focusOutEvent):
        (QQuickWebPage::mousePressEvent):
        (QQuickWebPage::mouseMoveEvent):
        (QQuickWebPage::mouseReleaseEvent):
        (QQuickWebPage::mouseDoubleClickEvent):
        (QQuickWebPage::wheelEvent):
        (QQuickWebPage::hoverEnterEvent):
        (QQuickWebPage::hoverMoveEvent):
        (QQuickWebPage::hoverLeaveEvent):
        (QQuickWebPage::dragMoveEvent):
        (QQuickWebPage::dragEnterEvent):
        (QQuickWebPage::dragLeaveEvent):
        (QQuickWebPage::dropEvent):
        (QQuickWebPage::geometryChanged):
        (QQuickWebPage::event):
        (QQuickWebPage::touchEvent):
        (QQuickWebPagePrivate::QQuickWebPagePrivate):